--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "chalk": "^4.0.0",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.4",
+    "express": "^4.17.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
