--- a/package.json
+++ b/package.json
@@ -1,42 +1,50 @@
 {
-  "name": "everday",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "chalk": "^4.0.0",
-    "connect-history-api-fallback": "^1.6.0",
-    "core-js": "^3.6.4",
-    "express": "^4.17.1",
-    "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.3.0",
-    "@vue/cli-plugin-e2e-cypress": "^4.3.0",
-    "@vue/cli-plugin-eslint": "^4.3.0",
-    "@vue/cli-plugin-pwa": "^4.3.0",
-    "@vue/cli-plugin-router": "^4.3.0",
-    "@vue/cli-plugin-unit-jest": "^4.3.0",
-    "@vue/cli-plugin-vuex": "^4.3.0",
-    "@vue/cli-service": "^4.3.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
-    "@vue/test-utils": "1.0.0-beta.31",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
-  }
+	"name": "everday",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build",
+		"test:unit": "vue-cli-service test:unit",
+		"test:e2e": "vue-cli-service test:e2e",
+		"lint": "vue-cli-service lint"
+	},
+	"dependencies": {
+		"bcrypt": "^4.0.1",
+		"body-parser": "^1.19.0",
+		"chalk": "^4.0.0",
+		"connect-history-api-fallback": "^1.6.0",
+		"cookie-session": "^1.4.0",
+		"core-js": "^3.6.4",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"helmet": "^3.22.0",
+		"ky": "^0.20.0",
+		"lodash": "^4.17.15",
+		"massive": "^6.4.0",
+		"register-service-worker": "^1.7.1",
+		"vue": "^2.6.11",
+		"vue-router": "^3.1.6",
+		"vuex": "^3.1.3"
+	},
+	"devDependencies": {
+		"@vue/cli-plugin-babel": "^4.3.0",
+		"@vue/cli-plugin-e2e-cypress": "^4.3.0",
+		"@vue/cli-plugin-eslint": "^4.3.0",
+		"@vue/cli-plugin-pwa": "^4.3.0",
+		"@vue/cli-plugin-router": "^4.3.0",
+		"@vue/cli-plugin-unit-jest": "^4.3.0",
+		"@vue/cli-plugin-vuex": "^4.3.0",
+		"@vue/cli-service": "^4.3.0",
+		"@vue/eslint-config-airbnb": "^5.0.2",
+		"@vue/test-utils": "1.0.0-beta.31",
+		"babel-eslint": "^10.1.0",
+		"eslint": "^6.7.2",
+		"eslint-plugin-import": "^2.20.2",
+		"eslint-plugin-vue": "^6.2.2",
+		"node-sass": "^4.12.0",
+		"sass-loader": "^8.0.2",
+		"vue-template-compiler": "^2.6.11"
+	},
+	"main": "server/server.js"
 }
