--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
 		"body-parser": "^1.19.0",
 		"chalk": "^4.0.0",
 		"connect-history-api-fallback": "^1.6.0",
-		"cookie-session": "^1.4.0",
 		"core-js": "^3.6.4",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-session": "^1.17.1",
 		"helmet": "^3.22.0",
 		"ky": "^0.20.0",
 		"lodash": "^4.17.15",
-		"massive": "^6.4.0",
+		"massive": "^6.1.1",
+		"moment": "^2.26.0",
 		"register-service-worker": "^1.7.1",
 		"vue": "^2.6.11",
 		"vue-router": "^3.1.6",
