--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"moment": "^2.26.0",
 		"register-service-worker": "^1.7.1",
 		"vue": "^2.6.11",
+		"vue-fragment": "^1.5.1",
 		"vue-router": "^3.1.6",
 		"vuex": "^3.1.3"
 	},
