password validation, confirmation

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
+		"express-validator": "^6.5.0",
 		"helmet": "^3.22.0",
 		"ky": "^0.20.0",
 		"lodash": "^4.17.15",
 		"massive": "^6.1.1",
 		"moment": "^2.26.0",
+		"password-validator": "^5.0.3",
 		"register-service-worker": "^1.7.1",
 		"vue": "^2.6.11",
 		"vue-fragment": "^1.5.1",
