--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
 	"name": "everday",
 	"version": "0.1.0",
-	"private": true,
+   "private": true,
+   "engines": {
+      "node": "12.17.x"
+   },
 	"scripts": {
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
