--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
       "node": "12.17.x"
    },
 	"scripts": {
+		"start": "vue-cli-service serve",
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
 		"test:unit": "vue-cli-service test:unit",
